# gitlab-actions

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  example.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
src/gitlab_actions/: actions.py  cli.py  filters.py  jobs.py  targets.py
tests/: test_gitlab_actions.py
